RPiにファイル転送，プログラム実行できる機能を追加．

--- a/src/main/resources/plugin_ja.properties
+++ b/src/main/resources/plugin_ja.properties
@@ -12,3 +12,11 @@ menu_setting_label=Setting
 menu_setting_tooltip=Generator Setting
 menu_generate_label=Generate
 menu_generate_tooltip=Generate code
+
+menu_ssh_group=Raspberry Pi
+menu_scp_label=scp
+menu_scp_tooltip=transfer source to RPi
+menu_ssh_invoke_label=execute
+menu_ssh_invoke_tooltip=execute program
+menu_ssh_settings_label=settings
+menu_ssh_settings_tooltip=settings
